[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genmolrl"
version = "0.1.0"
description = "Unified RL and generative molecule design experiments"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["genmolrl*"]
